--- a/content/publication/journal-article/cite.bib
+++ b/content/publication/journal-article/cite.bib
@@ -1,8 +1,10 @@
-@article{example2,
-  title = {An example journal article},
-  author={Bighetti, Nelson and Ford, Robert},
-  journal = {Journal of Source Themes},
-  year    = 2015,
-  volume  = 1,
-  number  = 1
+@article{williamson2016atr,
+  title={ATR inhibitors as a synthetic lethal therapy for tumours deficient in ARID1A},
+  author={Williamson, Chris T and Miller, Rowan and Pemberton, Helen N and Jones, Samuel E and Campbell, James and Konde, Asha and Badham, Nicholas and Rafiq, Rumana and Brough, Rachel and Gulati, Aditi and others},
+  journal={Nature communications},
+  volume={7},
+  number={1},
+  pages={1--13},
+  year={2016},
+  publisher={Nature Publishing Group}
 }
