--- a/content/publication/de-2021-comprehensive/cite.bib
+++ b/content/publication/de-2021-comprehensive/cite.bib
@@ -1,11 +1,15 @@
 @article{de2021comprehensive,
- author = {De Kegel, Barbara and Quinn, Niall and Thompson, Nicola A and Adams, David J and Ryan, Colm J},
- journal = {Cell Systems},
- number = {12},
- pages = {1144--1159},
- publisher = {Cell Press},
- title = {Comprehensive prediction of robust synthetic lethality between paralog pairs in cancer cell lines},
- volume = {12},
- year = {2021}
+title = {Comprehensive prediction of robust synthetic lethality between paralog pairs in cancer cell lines},
+journal = {Cell Systems},
+volume = {12},
+number = {12},
+pages = {1144-1159.e6},
+year = {2021},
+issn = {2405-4712},
+doi = {https://doi.org/10.1016/j.cels.2021.08.006},
+url = {https://www.sciencedirect.com/science/article/pii/S240547122100329X},
+author = {Barbara {De Kegel} and Niall Quinn and Nicola A. Thompson and David J. Adams and Colm J. Ryan},
+keywords = {paralogs, gene duplication, genetic interactions, synthetic lethality, CRISPR screens, cancer, precision medicine, machine learning},
+abstract = {Pairs of paralogs may share common functionality and, hence, display synthetic lethal interactions. As the majority of human genes have an identifiable paralog, exploiting synthetic lethality between paralogs may be a broadly applicable approach for targeting gene loss in cancer. However, only a biased subset of human paralog pairs has been tested for synthetic lethality to date. Here, by analyzing genome-wide CRISPR screens and molecular profiles of over 700 cancer cell lines, we identify features predictive of synthetic lethality between paralogs, including shared protein-protein interactions and evolutionary conservation. We develop a machine-learning classifier based on these features to predict which paralog pairs are most likely to be synthetic lethal and to explain why. We show that our classifier accurately predicts the results of combinatorial CRISPR screens in cancer cell lines and furthermore can distinguish pairs that are synthetic lethal in multiple cell lines from those that are cell-line specific. A record of this paper’s transparent peer review process is included in the supplemental information.}
 }
 
