--- a/content/publication/upadhya-2021-experimental/cite.bib
+++ b/content/publication/upadhya-2021-experimental/cite.bib
@@ -1,8 +1,13 @@
 @article{upadhya2021experimental,
- author = {Upadhya, Swathi Ramachandra and Ryan, Colm},
- journal = {bioRxiv},
- publisher = {Cold Spring Harbor Laboratory},
- title = {Experimental reproducibility limits the correlation between mRNA and protein abundances in tumour proteomic profiles},
- year = {2021}
+title = {Experimental reproducibility limits the correlation between mRNA and protein abundances in tumor proteomic profiles},
+journal = {Cell Reports Methods},
+pages = {100288},
+year = {2022},
+issn = {2667-2375},
+doi = {https://doi.org/10.1016/j.crmeth.2022.100288},
+url = {https://www.sciencedirect.com/science/article/pii/S2667237522001709},
+author = {Swathi Ramachandra Upadhya and Colm J. Ryan},
+keywords = {proteomics, proteogenomics, machine learning, reproducibility, transcriptomics, gene expression, post-transcriptional regulation, cancer},
+abstract = {Summary
+Large-scale studies of human proteomes have revealed only a moderate correlation between mRNA and protein abundances. It is unclear to what extent this moderate correlation reflects post-transcriptional regulation and to what extent it reflects measurement error. Here, by analyzing replicate profiles of tumors and cell lines, we show that there is considerable variation in the reproducibility of measurements of transcripts and proteins from individual genes. Proteins with more reproducible measurements tend to have a higher mRNA-protein correlation, suggesting that measurement reproducibility accounts for a substantial fraction of the unexplained variation between mRNA and protein abundances. The reproducibility of individual proteins is somewhat consistent across studies, and we exploit this to develop an aggregate reproducibility score that explains a substantial amount of the variation in mRNA-protein correlations across multiple studies. Finally, we show that pathways previously reported to have a higher-than-average mRNA-protein correlation may simply contain members that can be more reproducibly quantified.}
 }
-
