--- a/content/publication/moehle-2012-yeast/cite.bib
+++ b/content/publication/moehle-2012-yeast/cite.bib
@@ -1,11 +1,14 @@
-@article{moehle2012yeast,
- author = {Moehle, Erica A and Ryan, Colm J and Krogan, Nevan J and Kress, Tracy L and Guthrie, Christine},
- journal = {PLoS genetics},
- number = {11},
- pages = {e1003101},
- publisher = {Public Library of Science San Francisco, USA},
- title = {The yeast SR-like protein Npl3 links chromatin modification to mRNA processing},
- volume = {8},
- year = {2012}
+@article{10.1371/journal.pgen.1003101,
+    doi = {10.1371/journal.pgen.1003101},
+    author = {Moehle, Erica A. AND Ryan, Colm J. AND Krogan, Nevan J. AND Kress, Tracy L. AND Guthrie, Christine},
+    journal = {PLOS Genetics},
+    publisher = {Public Library of Science},
+    title = {The Yeast SR-Like Protein Npl3 Links Chromatin Modification to mRNA Processing},
+    year = {2012},
+    month = {11},
+    volume = {8},
+    url = {https://doi.org/10.1371/journal.pgen.1003101},
+    pages = {1-15},
+    abstract = {Eukaryotic gene expression involves tight coordination between transcription and pre–mRNA splicing; however, factors responsible for this coordination remain incompletely defined. Here, we explored the genetic, functional, and biochemical interactions of a likely coordinator, Npl3, an SR-like protein in Saccharomyces cerevisiae that we recently showed is required for efficient co-transcriptional recruitment of the splicing machinery. We surveyed the NPL3 genetic interaction space and observed a significant enrichment for genes involved in histone modification and chromatin remodeling. Specifically, we found that Npl3 genetically interacts with both Bre1, which mono-ubiquitinates histone H2B as part of the RAD6 Complex, and Ubp8, the de-ubiquitinase of the SAGA Complex. In support of these genetic data, we show that Bre1 physically interacts with Npl3 in an RNA–independent manner. Furthermore, using a genome-wide splicing microarray, we found that the known splicing defect of a strain lacking Npl3 is exacerbated by deletion of BRE1 or UBP8, a phenomenon phenocopied by a point mutation in H2B that abrogates ubiquitination. Intriguingly, even in the presence of wild-type NPL3, deletion of BRE1 exhibits a mild splicing defect and elicits a growth defect in combination with deletions of early and late splicing factors. Taken together, our data reveal a connection between Npl3 and an extensive array of chromatin factors and describe an unanticipated functional link between histone H2B ubiquitination and pre–mRNA splicing.},
+    number = {11}
 }
-
