--- a/content/publication/kolch-2018-systems/cite.bib
+++ b/content/publication/kolch-2018-systems/cite.bib
@@ -1,11 +1,16 @@
 @misc{kolch2018systems,
- author = {Kolch, Walter and Fey, Dirk and Ryan, Colm J},
- journal = {Essays in biochemistry},
- number = {4},
- pages = {483--486},
- publisher = {Portland Press Ltd.},
- title = {Systems biology: old news or new stimulus for biochemistry},
+ author = {Kolch, Walter and Fey, Dirk and Ryan, Colm J.},
+ title = "{Systems biology: old news or new stimulus for biochemistry}",
+ journal = {Essays in Biochemistry},
  volume = {62},
- year = {2018}
+ number = {4},
+ pages = {483-486},
+ year = {2018},
+ month = {10},
+ abstract = "{In this issue of Essays in Biochemistry, biochemistry meets systems biology—a blind date that may hold all the promises, pitfalls and failures of a relationship where a new discipline has been sprung upon a well-established one. As the articles in this issue show, the blind date in this case has great potential to develop into a long-term relationship, where both partners share common values but can benefit from different complementary approaches. Together this partnership is well poised to address and solve some of the major challenges in modern biology.}",
+ issn = {0071-1365},
+ doi = {10.1042/EBC20180002},
+ url = {https://doi.org/10.1042/EBC20180002},
+ eprint = {https://portlandpress.com/essaysbiochem/article-pdf/62/4/483/887333/ebc-2018-0002c.pdf},
 }
 
