--- a/content/publication/krogan-2015-genetic/cite.bib
+++ b/content/publication/krogan-2015-genetic/cite.bib
@@ -1,6 +1,14 @@
 @article{krogan2015genetic,
- author = {Krogan, Nevan and Guthrie, Christine and Patrick, KL and Ryan, CJ and Xu, J and Lipp, JJ and Nissen, KE and Roguev, A and Shales, M and Krogan, NJ},
- title = {Genetic Interaction Mapping Reveals a Role for the SWI/SNF Nucleosome Remodeler in Spliceosome Activation in Fission Yeast},
- year = {2015}
+  doi = {10.1371/journal.pgen.1005074},
+  author = {Patrick, Kristin L. AND Ryan, Colm J. AND Xu, Jiewei AND Lipp, Jesse J. AND Nissen, Kelly E. AND Roguev, Assen AND Shales, Michael AND Krogan, Nevan J. AND Guthrie, Christine},
+  journal = {PLOS Genetics},
+  publisher = {Public Library of Science},
+  title = {Genetic Interaction Mapping Reveals a Role for the SWI/SNF Nucleosome Remodeler in Spliceosome Activation in Fission Yeast},
+  year = {2015},
+  month = {03},
+  volume = {11},
+  url = {https://doi.org/10.1371/journal.pgen.1005074},
+  pages = {1-25},
+  abstract = {Although numerous regulatory connections between pre-mRNA splicing and chromatin have been demonstrated, the precise mechanisms by which chromatin factors influence spliceosome assembly and/or catalysis remain unclear. To probe the genetic network of pre-mRNA splicing in the fission yeast Schizosaccharomyces pombe, we constructed an epistatic mini-array profile (E-MAP) and discovered many new connections between chromatin and splicing. Notably, the nucleosome remodeler SWI/SNF had strong genetic interactions with components of the U2 snRNP SF3 complex. Overexpression of SF3 components in ΔSWI/SNF cells led to inefficient splicing of many fission yeast introns, predominantly those with non-consensus splice sites. Deletion of SWI/SNF decreased recruitment of the splicing ATPase Prp2, suggesting that SWI/SNF promotes co-transcriptional spliceosome assembly prior to first step catalysis. Importantly, defects in SWI/SNF as well as SF3 overexpression each altered nucleosome occupancy along intron-containing genes, illustrating that the chromatin landscape both affects—and is affected by—co-transcriptional splicing.},
+  number = {3},
 }
-
