--- a/content/publication/tosti-2014-evolutionarily/cite.bib
+++ b/content/publication/tosti-2014-evolutionarily/cite.bib
@@ -1,9 +1,10 @@
 @article{tosti2014evolutionarily,
  author = {Tosti, Elena and Katakowski, Joseph A and Schaetzlein, Sonja and Kim, Hyun-Soo and Ryan, Colm J and Shales, Michael and Roguev, Assen and Krogan, Nevan J and Palliser, Deborah and Keogh, Michael-Christopher and others},
- journal = {Genome medicine},
+ journal = {Genome Medicine},
  number = {9},
  pages = {1--14},
  publisher = {BioMed Central},
+ doi = {https://doi.org/10.1186/s13073-014-0068-4},
  title = {Evolutionarily conserved genetic interactions with budding and fission yeast MutS identify orthologous relationships in mismatch repair-deficient cancer cells},
  volume = {6},
  year = {2014}
