--- a/content/publication/ryan-2014-daisy/cite.bib
+++ b/content/publication/ryan-2014-daisy/cite.bib
@@ -1,11 +1,14 @@
 @article{ryan2014daisy,
- author = {Ryan, Colm J and Lord, Christopher J and Ashworth, Alan},
- journal = {Cancer cell},
- number = {3},
- pages = {306--308},
- publisher = {Elsevier},
- title = {DAISY: picking synthetic lethals from cancer genomes},
- volume = {26},
- year = {2014}
+title = {DAISY: Picking Synthetic Lethals from Cancer Genomes},
+journal = {Cancer Cell},
+volume = {26},
+number = {3},
+pages = {306-308},
+year = {2014},
+issn = {1535-6108},
+doi = {https://doi.org/10.1016/j.ccr.2014.08.008},
+url = {https://www.sciencedirect.com/science/article/pii/S1535610814003377},
+author = {Colm J. Ryan and Christopher J. Lord and Alan Ashworth},
+abstract = {A better understanding of genetic interactions in cancer might help identify new therapeutic approaches that exploit the concept of synthetic lethality. Ruppin and colleagues have developed a new computational method, DAISY, that predicts such interactions and potentially facilitates the delineation and validation of comprehensive genetic interaction networks.}
 }
 
