--- a/content/publication/ryan-2013-all/cite.bib
+++ b/content/publication/ryan-2013-all/cite.bib
@@ -1,11 +1,15 @@
 @article{ryan2013all,
- author = {Ryan, Colm J and Krogan, Nevan J and Cunningham, Pádraig and Cagney, Gerard},
- journal = {Genome biology and evolution},
- number = {6},
- pages = {1049--1059},
- publisher = {Oxford University Press},
- title = {All or nothing: protein complexes flip essentiality between distantly related eukaryotes},
- volume = {5},
- year = {2013}
+author = {Ryan, Colm J. and Krogan, Nevan J. and Cunningham, Pádraig and Cagney, Gerard},
+title = "{All or Nothing: Protein Complexes Flip Essentiality between Distantly Related Eukaryotes}",
+journal = {Genome Biology and Evolution},
+volume = {5},
+number = {6},
+pages = {1049-1059},
+year = {2013},
+month = {05},
+abstract = "{In the budding yeast Saccharomyces cerevisiae, the subunits of any given protein complex are either mostly essential or mostly nonessential, suggesting that essentiality is a property of molecular machines rather than individual components. There are exceptions to this rule, however, that is, nonessential genes in largely essential complexes and essential genes in largely nonessential complexes. Here, we provide explanations for these exceptions, showing that redundancy within complexes, as revealed by genetic interactions, can explain many of the former cases, whereas “moonlighting,” as revealed by membership of multiple complexes, can explain the latter. Surprisingly, we find that redundancy within complexes cannot usually be explained by gene duplication, suggesting alternate buffering mechanisms. In the distantly related Schizosaccharomyces pombe, we observe the same phenomenon of modular essentiality, suggesting that it may be a general feature of eukaryotes. Furthermore, we show that complexes flip essentiality in a cohesive fashion between the two species, that is, they tend to change from mostly essential to mostly nonessential, or vice versa, but not to mixed patterns. We show that these flips in essentiality can be explained by differing lifestyles of the two yeasts. Collectively, our results support a previously proposed model where proteins are essential because of their involvement in essential functional modules rather than because of specific topological features such as degree or centrality.}",
+issn = {1759-6653},
+doi = {10.1093/gbe/evt074},
+url = {https://doi.org/10.1093/gbe/evt074},
+eprint = {https://academic.oup.com/gbe/article-pdf/5/6/1049/17919717/evt074.pdf},
 }
-
