--- a/content/publication/ryan-2012-hierarchical/cite.bib
+++ b/content/publication/ryan-2012-hierarchical/cite.bib
@@ -1,11 +1,14 @@
 @article{ryan2012hierarchical,
- author = {Ryan, Colm J and Roguev, Assen and Patrick, Kristin and Xu, Jiewei and Jahari, Harlizawati and Tong, Zongtian and Beltrao, Pedro and Shales, Michael and Qu, Hong and Collins, Sean R and others},
- journal = {Molecular cell},
- number = {5},
- pages = {691--704},
- publisher = {Elsevier},
- title = {Hierarchical modularity and the evolution of genetic interactomes across species},
- volume = {46},
- year = {2012}
+ title = {Hierarchical Modularity and the Evolution of Genetic Interactomes across Species},
+journal = {Molecular Cell},
+volume = {46},
+number = {5},
+pages = {691-704},
+year = {2012},
+issn = {1097-2765},
+doi = {https://doi.org/10.1016/j.molcel.2012.05.028},
+url = {https://www.sciencedirect.com/science/article/pii/S1097276512004443},
+author = {Colm J. Ryan and Assen Roguev and Kristin Patrick and Jiewei Xu and Harlizawati Jahari and Zongtian Tong and Pedro Beltrao and Michael Shales and Hong Qu and Sean R. Collins and Joseph I. Kliegman and Lingli Jiang and Dwight Kuo and Elena Tosti and Hyun-Soo Kim and Winfried Edelmann and Michael-Christopher Keogh and Derek Greene and Chao Tang and Pádraig Cunningham and Kevan M. Shokat and Gerard Cagney and J. Peter Svensson and Christine Guthrie and Peter J. Espenshade and Trey Ideker and Nevan J. Krogan},
+abstract = {To date, cross-species comparisons of genetic interactomes have been restricted to small or functionally related gene sets, limiting our ability to infer evolutionary trends. To facilitate a more comprehensive analysis, we constructed a genome-scale epistasis map (E-MAP) for the fission yeast Schizosaccharomyces pombe, providing phenotypic signatures for ∼60% of the nonessential genome. Using these signatures, we generated a catalog of 297 functional modules, and we assigned function to 144 previously uncharacterized genes, including mRNA splicing and DNA damage checkpoint factors. Comparison with an integrated genetic interactome from the budding yeast Saccharomyces cerevisiae revealed a hierarchical model for the evolution of genetic interactions, with conservation highest within protein complexes, lower within biological processes, and lowest between distinct biological processes. Despite the large evolutionary distance and extensive rewiring of individual interactions, both networks retain conserved features and display similar levels of functional crosstalk between biological processes, suggesting general design principles of genetic interactomes.}
 }
 
