--- a/content/publication/de-2022-paralog/cite.bib
+++ b/content/publication/de-2022-paralog/cite.bib
@@ -1,8 +1,15 @@
-@article{de2022paralog,
+@article{de2023paralog,
  author = {De Kegel, Barbara and Ryan, Colm J},
- journal = {bioRxiv},
- publisher = {Cold Spring Harbor Laboratory},
- title = {Paralog dispensability shapes homozygous deletion patterns in tumor genomes},
- year = {2022}
+title = {Paralog dispensability shapes homozygous deletion patterns in tumor genomes},
+journal = {Molecular Systems Biology},
+volume = {19},
+number = {12},
+pages = {e11987},
+keywords = {copy number variation, dispensability, paralogs, robustness, tumor genome evolution},
+doi = {https://doi.org/10.15252/msb.202311987},
+url = {https://www.embopress.org/doi/abs/10.15252/msb.202311987},
+eprint = {https://www.embopress.org/doi/pdf/10.15252/msb.202311987},
+abstract = {Abstract Genomic instability is a hallmark of cancer, resulting in tumor genomes having large numbers of genetic aberrations, including homozygous deletions of protein coding genes. That tumor cells remain viable in the presence of such gene loss suggests high robustness to genetic perturbation. In model organisms and cancer cell lines, paralogs have been shown to contribute substantially to genetic robustness—they are generally more dispensable for growth than singletons. Here, by analyzing copy number profiles of > 10,000 tumors, we test the hypothesis that the increased dispensability of paralogs shapes tumor genome evolution. We find that genes with paralogs are more likely to be homozygously deleted and that this cannot be explained by other factors known to influence copy number variation. Furthermore, features that influence paralog dispensability in cancer cell lines correlate with paralog deletion frequency in tumors. Finally, paralogs that are broadly essential in cancer cell lines are less frequently deleted in tumors than non-essential paralogs. Overall, our results suggest that homozygous deletions of paralogs are more frequently observed in tumor genomes because paralogs are more dispensable.},
+year = {2023}
 }
 
