--- a/content/publication/tudose-2023-GNR/cite.bib
+++ b/content/publication/tudose-2023-GNR/cite.bib
@@ -1,12 +1,15 @@
-@article {Tudose2023.03.02.530664,
-	author = {Tudose, Cosmin and Bond, Jonathan and Ryan, Colm},
-	title = {Gene essentiality in cancer is better predicted by mRNA abundance than by gene regulatory network-inferred activity},
-	elocation-id = {2023.03.02.530664},
-	year = {2023},
-	doi = {10.1101/2023.03.02.530664},
-	publisher = {Cold Spring Harbor Laboratory},
-	abstract = {Gene regulatory networks (GRNs) are often deregulated in tumor cells, resulting in altered transcriptional programs that facilitate tumor growth. These altered networks may make tumor cells vulnerable to the inhibition of specific regulatory proteins. Consequently, the reconstruction of GRNs in tumors is often proposed as a means to identify therapeutic targets. While there are examples of individual targets identified using GRNs, the extent to which GRNs can be used to predict sensitivity to targeted intervention in general remains unknown. Here we use the results of genome-wide CRISPR screens to systematically assess the ability of GRNs to predict sensitivity to gene inhibition in cancer cell lines. Using GRNs derived from multiple sources, including GRNs reconstructed from tumor transcriptomes and from curated databases, we infer regulatory gene activity in cancer cell lines from ten cancer types. We then ask, in each cancer type, if the inferred regulatory activity of each gene is predictive of sensitivity to CRISPR perturbation of that gene. We observe slight variation in the correlation between gene regulatory activity and gene sensitivity depending on the source of the GRN and the activity estimation method used. However, we find that there is consistently a stronger relationship between mRNA abundance and gene sensitivity than there is between regulatory gene activity and gene sensitivity. This is true both when gene sensitivity is treated as a binary and a quantitative property. Overall, our results suggest that gene sensitivity is better predicted by measured expression than by GRN-inferred activity.Competing Interest StatementThe authors have declared no competing interest.},
-	URL = {https://www.biorxiv.org/content/early/2023/03/04/2023.03.02.530664},
-	eprint = {https://www.biorxiv.org/content/early/2023/03/04/2023.03.02.530664.full.pdf},
-	journal = {bioRxiv}
+@article {Tudose2023,
+	author = {Tudose, Cosmin and Bond, Jonathan and Ryan, Colm J},
+    title = "{Gene essentiality in cancer is better predicted by mRNA abundance than by gene regulatory network-inferred activity}",
+    journal = {NAR Cancer},
+    volume = {5},
+    number = {4},
+    pages = {zcad056},
+    year = {2023},
+    month = {11},
+    abstract = "{Gene regulatory networks (GRNs) are often deregulated in tumor cells, resulting in altered transcriptional programs that facilitate tumor growth. These altered networks may make tumor cells vulnerable to the inhibition of specific regulatory proteins. Consequently, the reconstruction of GRNs in tumors is often proposed as a means to identify therapeutic targets. While there are examples of individual targets identified using GRNs, the extent to which GRNs can be used to predict sensitivity to targeted intervention in general remains unknown. Here we use the results of genome-wide CRISPR screens to systematically assess the ability of GRNs to predict sensitivity to gene inhibition in cancer cell lines. Using GRNs derived from multiple sources, including GRNs reconstructed from tumor transcriptomes and from curated databases, we infer regulatory gene activity in cancer cell lines from ten cancer types. We then ask, in each cancer type, if the inferred regulatory activity of each gene is predictive of sensitivity to CRISPR perturbation of that gene. We observe slight variation in the correlation between gene regulatory activity and gene sensitivity depending on the source of the GRN and the activity estimation method used. However, we find that there is consistently a stronger relationship between mRNA abundance and gene sensitivity than there is between regulatory gene activity and gene sensitivity. This is true both when gene sensitivity is treated as a binary and a quantitative property. Overall, our results suggest that gene sensitivity is better predicted by measured expression than by GRN-inferred activity.}",
+    issn = {2632-8674},
+    doi = {10.1093/narcan/zcad056},
+    url = {https://doi.org/10.1093/narcan/zcad056},
+    eprint = {https://academic.oup.com/narcancer/article-pdf/5/4/zcad056/53894814/zcad056.pdf},
 }
